--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: CU-Boulder Data Bootcamp Project 
+title: Erin Robinson's CU-Boulder Data Bootcamp Project 
 email: erin.robinson-1@colorado.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is a site and repo for my CU-Boulder Data Bootcamp activities.
 baseurl: "/pages-sample" # the subpath of your site, e.g. /blog
 url: "https://erinmr.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: connector_erin
+github_username:  erinmr
 
 # Build settings
 theme: jekyll-theme-cayman
