--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,9 @@ theme: minima
 plugins:
   - jekyll-feed
 
-header_pages:
-  - R-Project-Badge
-  - Data Readme
+#header_pages:
+ # - R-Project-Badge
+ # - Data Readme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
