--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ header_pages:
   - about.md
   - R-Project-Badge.md
   - Readme-Rproject.md
+  - DatasetEval-Rproject.md
   - R_codeexample.md
  # - Data Readme
 
